<resources>
    <string name="app_name">UniCa</string>
    <string name="toukou">投稿</string>
    <string name="coupon_setting">サービス券編集</string>
    <string name="setting">設定</string>
    <string name="barcode_scan">QRko-do</string>
    <string name="scan">QRコード読込</string>
    <string name="back_nome">終了</string>
    <string name="text">QRコードの読込が完了しました。</string>
    <string name="ticket">クーポン型</string>
    <string name="stump">スタンプ型</string>
    <string name="stump_text">スタンプ型</string>
    <string name="plan1_resouse">投稿回数　〇回/月</string>
    <string name="silver_plan">シルバープラン　380円/月</string>
    <string name="gold_plan">ゴールドプラン　580円/月</string>
    <string name="plan2_1">投稿回数　◎回/月</string>
    <string name="plutinum">プラチナムプラン　980円/月</string>
    <string name="plan3_1">投稿回数　□回/月</string>
    <string name="plan" />
    <string name="fee" />
    <string name="cade">サービス券のタイプ</string>
    <string name="coupon_type" />
    <string name="settei">どのようなサービスにするか記入して下さい。</string>
    <string name="settei1" />
    <string name="coupon_settei">サービスの入力</string>
    <string name="result">サービスの確認</string>
    <string name="result_messerge">このサービス内容でよろしいですか？</string>
    <string name="result_naiyou" />
    <string name="youzer">一般ユーザー向け</string>
    <string name="select">ご利用目的を選択してください。</string>
    <string name="shopside">企業・店舗向け</string>
    <string name="sample">替え玉無料</string>
    <string name="sample2">クーポン型</string>
    <string name="service">サービス内容</string>
    <string name="sample3">替え玉無料</string>
    <string name="sample4">シルバープラン　380円/月</string>
    <string name="shop_name" />
    <string name="shp_adress" />
    <string name="adress">住所</string>
    <string name="title">タイトル：</string>
    <string name="titlename" />
    <string name="syosai">詳細</string>
    <string name="back_1">戻る</string>
    <string name="save">投稿</string>
    <string name="setumei">投稿するタイトルと内容を入力し、投稿をタップしてください。</string>
    <string name="back_2">戻る</string>
    <string name="new01">投稿する</string>
    <string name="testname">テスト</string>
    <string name="detail" />
    <string name="title2" />
    <string name="reload">更新</string>
    <string name="titleView" />
    <string name="detailView" />
    <string name="title_activity_message_list_show">MessageListShow</string>
    <string name="CouponEdit">編集したい部分をタップしてください。</string>
    <string name="shopName" />
    <string name="CouponText">サービス券一覧</string>
    <string name="Coupon1" />
    <string name="Coupon2" />
    <string name="Coupon3" />
    <string name="CouponSet">変更</string>
    <string name="back_coupon_setting">戻る</string>
    <string name="newcoupon1" />
    <string name="newcoupon2" />
    <string name="newcoupon3" />
    <string name="PR" />
    <string name="newPR" />
    <string name="textvew26">の編集</string>
    <string name="CouponCheck1" />
    <string name="CouponCheck2" />
    <string name="CouponCheck3" />
    <string name="PrCheck" />
    <string name="titlelist" />
    <string name="detailshow" />
    <string name="backList">戻る</string>
    <string name="detailbutton">詳細</string>
    <string name="toiukouzyoukyou">現在投稿しているお知らせです。\n新しく投稿する場合は投稿するをタップしてください。</string>
    <string name="before">変更前</string>
    <string name="after">変更後</string>
    <string name="osuusme">おすすめ商品を入力してください</string>
    <string name="itemName" />
    <string name="itemname" />
    <string name="item" />
    <string name="osiraseq">この内容はサービス券のお知らせに表示されます。</string>
</resources>
